# lattice

./: .gitignore  README.md  mkdocs.yml  pyproject.toml
.github/workflows/: ci.yml  docs.yml
benchmarks/: routing_benchmark.py  throughput_benchmark.py
docs/: index.md
examples/: multi_agent_research.py  quickstart.py  verified_workflow.py
src/lattice/: __init__.py
src/lattice/agents/: __init__.py  base.py  critic.py  human.py  tool.py
src/lattice/core/: __init__.py  executor.py  memory.py  planner.py  router.py  verifier.py
src/lattice/execution/: __init__.py  checkpointing.py  dag.py  streaming.py
src/lattice/integrations/: __init__.py  anthropic.py  litellm.py  openai.py
src/lattice/observability/: __init__.py  logging.py  metrics.py  tracing.py
src/lattice/routing/: __init__.py  classifier.py  embedder.py  feedback.py
src/lattice/verification/: __init__.py  invariants.py  policies.py  solver.py
tests/: test_executor.py  test_memory.py  test_planner.py  test_router.py  test_verifier.py
